<resources>
    <string name="app_name">Projekt_IT</string>

    <string name="title_section1">Hem</string>
    <string name="title_section2">Min Trädgård</string>
    <string name="title_section3">Sök</string>
    <string name="title_section4">Hjälp</string>
    <string name="title_section5">Inställningar</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_my_garden_list">Min Trädgård</string>
    <string name="title_activity_new_garden">Ny Trädgård</string>

    <string name="EnterGardenName">Ange trädgårdens namn</string>
    <string name="EnterGardenLocation">Ange stad</string>
    <string name="EnterGardenZone">Ange zon</string>
    <string name="SaveNewGarden">Spara</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="open_drawer">\"open_drawer\"</string>
    <string name="close_drawer">\"close_drawer\"</string>
    <string name="title_activity_activity_init">activity_init</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_init">init</string>
    <string name="title_activity_login">login</string>
    <string name="subscription_number">Prenumerationsnummer</string>
    <string name="title_activity_plant_search">PlantSearchActivity</string>
    <string name="garden_list_menu_box_message">Alternativ</string>
    <string name="garden_list_menu_box_message2">Ange ett nytt namn</string>
    <string name="garden_list_menu_box_message4">Välj trädgård</string>
    <string name="garden_list_menu_box_message_save">Spara</string>
    <string name="garden_list_menu_box_message_cancel">Avbryt</string>

    <!-- SETTINGS -->
    <string name="notification_id_on">notification_on</string>
    <string name="notifications_on">Push Notifikationer</string>
    <string name="notification_on_summary">Tillåt att notifikationer skickas</string>
    <string name="notification_id_sound">notification_sound</string>
    <string name="notifications_sound">Ljud</string>
    <string name="notification_sound_summary">Tillåt ljud vid notifikationer</string>
    <string name="notification_id_vibration">notification_vibration</string>
    <string name="notification_vibration">Vibration</string>
    <string name="notification_vibration_summary">Tillåt vibration vid notifikationer</string>

    <string name="premKey">premnummer</string>
    <string name="title_activity_mon_tips">mon_tips</string>
    <string name="title_activity_my_flower">MyFlowerActivity</string>
    <string name="title_activity_my_flower_web">MyFlowerWebActivity</string>

    <string name="mon_tips">
        <![CDATA[
        <b>Saker att göra och check-lista för trädgården i april. Rabatter förbereds, och vi börjar så smått att plantera och så i söder. Kallväxthusen tas i bruk. Nu är bästa tiden att satsa på ogräs- och snigelbekämpning, så att du får försprång istället för tvärtom!</b><br><br><br>
        <h1>Växtskydd och ogräsbekämpning - starta nu!</h1>
        <p><b>Rensa ogräset</b> nu, så blir ligger du på plus och får mindre att hålla efter senare. Se till att gräva bort alla rotdelar av flerårigt ogräs. Använd gärna ett täckmaterial i rabatterna, så får eventuella fröogräs svårare att nå upp till ljuset.</p>
        <p><b>Börja håll efter den röda liljebaggen</b> som har kejsarkronan och andra liljor som stående huvudrätt på vårmenyn. Plocka bort baggarna en och en för hand. Avlägsna ägg och larver från undersidan av bladen. Läs: <a href="http://www.alltomtradgard.se/problemlosning/maj/hur-bekampa-liljebaggar">Hur bekämpa liljebaggar?</a></p>
        <p><b>Plocka snäckor och sniglar nu!</b> Först ut på våren är trädgårdssnäckan som kan ställa till stor skada både på perenner och köksväxter. Plocka de stora snäckorna så fort du ser dem så hinner de inte lägga sina ägg. Titta också efter nykläckta småsnäckor – de är bara några millimeter stora, men ack så hungriga. Spansk skogssnigel (mördarsnigel) och åkersnigel kommer fram senare på våren, men du kan redan nu hitta deras gömmor när du vänder på saker i trädgården.</p>
        <p><b>Växtskydda</b> tulpaner, uppstickande flox, kärleksört och annan växtlighet som rådjur och harar älskar behöver skyddas. Använd viltskrämma eller oasis, tygklut eller kökssvamp och ammoniak som fästs på en pinne och placeras ut strategiskt bland växterna.</p>
        <br><h1>Vårsådd ute och inne</h1>
        <p>I söder är det redan dags för vårsådd i köksväxtlandet. <b>Dill, persilja, morot, bondböna, sallat, sockerärt, rädisa, palsternacka</b> och <b>spenat</b> kan du så, så fort det går att komma i jorden. Och glöm inte <b>sättlök</b>, den kan också sättas mycket tidigt. Så gärna lite ringblommor eller andra pollinerarblommor här och där. (<b>Vänta med bönor</b> som vill ha minst 12 plusgrader i jorden innan de kan gro. Vänta även med <b>rödbetor, fänkål</b> och <b>mangold</b>.)</p>
        <p>Fortsätt att så grönsaker och blommor som kräver <b>förkultivering inomhus</b>. Räkna med utplantering i månadsskiftet maj – juni. Kolla på fröpåsarna hur lång förodlingstid som krävs, och räkna bakåt så får du fram rätt såtid.</p>
        <br><h1>Vårbeskärning</h1>
        <p>Dags att <b>beskära rosorna</b>. Glöm regeln om "musöron på björkarna", då är det nästan försent och det blir i vilket fall som helst väldigt stressigt att pricka in.</p>
        <p><b>Bra tid att ympa</b> fruktträd. Du kan få flera olika fruksorter på ett och samma träd. Film: <a href="http://www.alltomtradgard.se/artiklar/webb-tv/Ympa-apple-">Ympa äpple</a></p>
        <p><b>Putsa och bind upp klängväxterna</b> tidigt. Det är lättare nu än om några veckor, när man måste vara aktsam om spirande skott. Läs: <a href="http://www.alltomtradgard.se/artiklar/vaxter/beskara-klematis-ratt">Beskära klematis rätt</a></p>
        <p><b>Beskär barrväxter</b> innan de börjar med årets tillväxt. Generellt beskärs barrväxter antingen nu eller på hösten när tillväxten avstannat. Läs: <a href="http://www.alltomtradgard.se/artiklar/beskara-barrvaxter">Beskära barrväxter</a></p>
        <p>Om du <b>beskär fruktträd</b> och ändå är uppe i kronorna, passa på att ta bort skrumpen och svampangripen frukt om den sitter kvar i fruktträden. Kvarsittande <b>fruktmumier</b> kan sprida sjukdomar till årets nya skörd.</p>
        <br><h1>Vårfixa gräsmattan</h1>
        <p><b>Så fort marken torkat upp</b> kan du räfsa bort skräp som samlats på gräsmattan. Fyll upp ojämnheter med sandblandad jord och så i med reparationsgräs. Så också i eventuellt kala fläckar. Ge hela mattan en första omgång näring. Kväve är viktigast så här på våren. Läs: <a href="http://www.alltomtradgard.se/artiklar/godsla-grasmattan">Gödsla gräsmattan rätt</a>, <a href="http://www.alltomtradgard.se/artiklar/snabbfix-for-grasmatta">5 snabbfix för gammal gräsmatta</a></p>
        <br><h1>I rabatter och bäddar</h1>
        <p>När jorden reder sig, d v s när den torkat upp och inte klumpar sig när man gräver kan man börja göra iordning bäddar och rabatter. Förutom att ta bort ogräs kan man <b>jordförbättra</b> genom att luckra upp jordytan, <b>gödsla</b> och lägga på ett topplager av ny jord, kompost eller barkmull. Läs: <a href="http://www.alltomtradgard.se/artiklar/odla-i-kokslandet/sa-forbattrar-du-din-jord">Så förbättrar du din jord</a></p>
        <p><b>Efter vintern kan det</b> vara ganska hårdpackat i komposten. Rör eller kasta om kompostmaterialet för att få fart på förmultningen. <b>Färdig kompost</b> läggs på köklandet och i rabatten.</p>
        <p><b>April är perfekt planteringsmånad</b> i de lägre klimatzonerna (1-4) för träd, buskar, rosor, barrväxter och klängväxter. (Men vänta några veckor med perennerna. Och inte förrän mot slutet av maj är det dags för de ettåriga utplanteringsväxterna som är ytterst frostkänsliga.) Från zon 5 och högre kan det vara bäst att vänta till maj med de flesta planteringar. Framförallt om våren skulle vara sen.</p>
        <p>Många höstblommande <b>perenner förökas och föryngras</b> genom delning nu på våren. De flesta perenner mår bra av att delas vart 4–6 år. Läs: <a href="http://www.alltomtradgard.se/artiklar/dela-perenner">Skatta rabatten - dela perenner</a></p>
        <br><h1>Kicka igång Kallväxthuset</h1>
        <p><b>Använd kallväxthuset</b> för att starta upp växter i kruka som senare ska växa utomhus. <b>Extra tidig färskpotatis</b> kan uppnås genom att sätta några tidiga sorter i en 10 liters mörk hink. Placera i växthuset eller på inglasad balkong. Här kan du också så grönsaker för extra tidig skörd, till exempel sallat, rädisor och ruccola.</p>
        <p><b>När frösådda plantor</b> inomhus vuxit till sig, planterar du om dem en och en i krukor så att de får plats att växa ut till kraftiga plantor. Beroende av sort och temperaturen i kallväxthuset, kan man börja att avhärda några i kallväxthuset. Ha gärna frostvakt. Film: <a href="http://www.alltomtradgard.se/artiklar/webb-tv/jordblandnng-och-omskolning">Jordblandning och omskolning</a></p>
        <br><h1>Frosttåligt och frostkänsligt</h1>
        <p><b>Pensé, förgätmigej, jordviva, vårljung, tusensköna</b>. Där har du ett knippe frosttåliga vårblommor som du kan sätta i kruka och ställa utomhus på trappan eller altanen redan nu. Men blir natten riktigt kall tar du in dem.</p>
        <p><b>Avlägsna vintertäckning</b> som skyddat ömtåliga växter under vintern. Och var försiktig så att du inte skadar spirande skott. I perennrabatten kan du rensa upp och klippa bort alla <b>torra växtrester</b> från förra året.</p>
        <p><b>Ha beredskap för hårda frostnätter</b>. Om det är frost på gång bör du täcka ömtåliga, spirande växter med fiberduk. Och ta in växter i krukor som redan placerats ut. Har du planterat tomater, paprika eller annat i växthuset, se till att du har någon form av frostvakt som håller minusgraderna ut.</p>
        <br><h1>Var rädd om igelkottarna!</h1>
        <p>Om högen som du ska bränna vid Valborg har legat ett tag, flytta den, rör om och gör ordning den igen, så att inga igelkottar som övervintrat i högen blir innebrända.</p>
        <br><h1>Förbereda dammen</h1>
        <p>I dammen är det dags att sätta igång <b>pumpar och filter. Städa</b> bort allt skräp, om du inte gjort det tidigare, och fyll/byt vatten. Att <b>plantera en näckros</b> i dammen går bra nu, men vänta med flytväxter som vattenhyacint med flera tills vattentemperaturen blivit minst 15 grader. I <a href="http://www.alltomtradgard.se/faktabank/tradgard/damm-och-sumpvaxter/">Faktabanken</a> finns en hel kategori med damm-artiklar.</p>
        ]]>
    </string>

    <string-array name="list_items">
        <item>Hem</item>
        <item>Min Trädgård</item>
        <item>Sök</item>
        <item>Hjälp</item>
        <item>Logga ut</item>
        <item>Inställningar</item>
    </string-array>
</resources>
